# zero2prod

./: .env  CLAUDE.md  Cargo.toml  README.md  configuration.yaml
.github/workflows/: audit.yml  general.yml
postman/: zero2prod.postman_collection.json
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
