[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.13.0"
serde_json = "1.0.149"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
reqwest = { version = "0.13.2", features = ["json"] }

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]
